// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`delete preview image 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div
        class="van-image van-uploader__preview-image"
        style="width: 30px; height: 30px;"
      >
        <img
          src="https://fastly.jsdelivr.net/npm/@vant/assets/cat.jpeg"
          class="van-image__img"
          style="object-fit: cover;"
        >
        <div class="van-image__loading">
          <i class="van-badge__wrapper van-icon van-icon-photo van-image__loading-icon">
          </i>
        </div>
      </div>
      <div
        role="button"
        class="van-uploader__preview-delete van-uploader__preview-delete--shadow"
        tabindex="0"
        aria-label="Delete"
      >
        <i class="van-badge__wrapper van-icon van-icon-cross van-uploader__preview-delete-icon">
        </i>
      </div>
    </div>
    <div
      class="van-uploader__upload"
      style="width: 30px; height: 30px;"
    >
      <i class="van-badge__wrapper van-icon van-icon-photograph van-uploader__upload-icon">
      </i>
      <input
        type="file"
        class="van-uploader__input"
        accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`disable preview image 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload">
      <i class="van-badge__wrapper van-icon van-icon-photograph van-uploader__upload-icon">
      </i>
      <input
        type="file"
        class="van-uploader__input"
        accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`disable preview image 2`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-uploader__file">
        <i class="van-badge__wrapper van-icon van-icon-description van-uploader__file-icon">
        </i>
        <div class="van-uploader__file-name van-ellipsis">
          test.jpg
        </div>
      </div>
      <div
        role="button"
        class="van-uploader__preview-delete van-uploader__preview-delete--shadow"
        tabindex="0"
        aria-label="Delete"
      >
        <i class="van-badge__wrapper van-icon van-icon-cross van-uploader__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="van-uploader__upload">
      <i class="van-badge__wrapper van-icon van-icon-photograph van-uploader__upload-icon">
      </i>
      <input
        type="file"
        class="van-uploader__input"
        accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`file message should be reactive 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload">
      <i class="van-badge__wrapper van-icon van-icon-photograph van-uploader__upload-icon">
      </i>
      <input
        type="file"
        class="van-uploader__input"
        accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`image-fit prop 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image">
        <img
          src="https://fastly.jsdelivr.net/npm/@vant/assets/cat.jpeg"
          class="van-image__img"
          style="object-fit: contain;"
        >
        <div class="van-image__loading">
          <i class="van-badge__wrapper van-icon van-icon-photo van-image__loading-icon">
          </i>
        </div>
      </div>
      <div
        role="button"
        class="van-uploader__preview-delete van-uploader__preview-delete--shadow"
        tabindex="0"
        aria-label="Delete"
      >
        <i class="van-badge__wrapper van-icon van-icon-cross van-uploader__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="van-uploader__upload">
      <i class="van-badge__wrapper van-icon van-icon-photograph van-uploader__upload-icon">
      </i>
      <input
        type="file"
        class="van-uploader__input"
        accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`render preview image 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image">
        <img
          src="https://fastly.jsdelivr.net/npm/@vant/assets/cat.jpeg"
          class="van-image__img"
          style="object-fit: cover;"
        >
        <div class="van-image__loading">
          <i class="van-badge__wrapper van-icon van-icon-photo van-image__loading-icon">
          </i>
        </div>
      </div>
      <div
        role="button"
        class="van-uploader__preview-delete van-uploader__preview-delete--shadow"
        tabindex="0"
        aria-label="Delete"
      >
        <i class="van-badge__wrapper van-icon van-icon-cross van-uploader__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="van-uploader__preview">
      <div class="van-uploader__file">
        <i class="van-badge__wrapper van-icon van-icon-description van-uploader__file-icon">
        </i>
        <div class="van-uploader__file-name van-ellipsis">
          https://fastly.jsdelivr.net/npm/@vant/assets/test.pdf
        </div>
      </div>
      <div
        role="button"
        class="van-uploader__preview-delete van-uploader__preview-delete--shadow"
        tabindex="0"
        aria-label="Delete"
      >
        <i class="van-badge__wrapper van-icon van-icon-cross van-uploader__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="van-uploader__preview">
      <div class="van-uploader__file">
        <i class="van-badge__wrapper van-icon van-icon-description van-uploader__file-icon">
        </i>
        <div class="van-uploader__file-name van-ellipsis">
          test.jpg
        </div>
      </div>
      <div
        role="button"
        class="van-uploader__preview-delete van-uploader__preview-delete--shadow"
        tabindex="0"
        aria-label="Delete"
      >
        <i class="van-badge__wrapper van-icon van-icon-cross van-uploader__preview-delete-icon">
        </i>
      </div>
    </div>
    <div class="van-uploader__upload">
      <i class="van-badge__wrapper van-icon van-icon-photograph van-uploader__upload-icon">
      </i>
      <input
        type="file"
        class="van-uploader__input"
        accept="image/*"
      >
    </div>
  </div>
</div>
`;

exports[`should not render upload input when using readonly prop 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload van-uploader__upload--readonly">
      <i class="van-badge__wrapper van-icon van-icon-photograph van-uploader__upload-icon">
      </i>
    </div>
  </div>
</div>
`;

exports[`should render preview-cover slot correctly 1`] = `
<div class="van-uploader__preview-cover">
  Custom Preview Cover
</div>
`;

exports[`should render preview-delete slot correctly 1`] = `
<div
  role="button"
  class="van-uploader__preview-delete"
  tabindex="0"
  aria-label="Delete"
>
  Custom Preview Delete
</div>
`;

exports[`upload-icon prop 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload">
      <i class="van-badge__wrapper van-icon van-icon-add van-uploader__upload-icon">
      </i>
      <input
        type="file"
        class="van-uploader__input"
        accept="image/*"
      >
    </div>
  </div>
</div>
`;
